--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "axios-hooks": "^4.0.0",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
+    "i18next": "^22.4.9",
+    "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.4",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
