--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "http://RandieSasongko.github.io/NinjaBocil",
+  "homepage": "http://RandieSasongko123.github.io/NinjaBocil",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
